# fair-taxi-cruising

./: .gitignore  README.md  dag_defaults.json  requirements.txt  setup.py  spec-file.txt
config/: dag_defaults.json
dags/: dummy.json  fixed_full_real_clean.json  fixed_full_real_dense_clean2.json  full_real.json  full_real_clean.json  full_real_clean_1cell.json  full_real_clean_idle.json  full_real_clean_nomatch.json  full_real_clean_nonzerowc.json  full_real_dense.json  full_real_dense_clean.json  full_real_dense_clean2.json  full_real_dense_clean2_nonzero.json  full_real_dense_clean_nomatch.json  full_real_dense_clean_nonzerowc.json  full_real_driver.json  full_real_sparse_clean.json  full_real_sparse_clean2.json  medium_airport.json  medium_grid.json  medium_grid_dense.json  medium_grid_dense_clean.json  medium_grid_few_cars.json  medium_grid_orient.json  medium_grid_zero.json  orig_medium_grid.json  robust_medium_grid.json  rw_study.json  sample_real.json  small_airport.json  star.json  star_ca2c.json  star_ca2c_cmp_orig.json  star_gym.json  tiny_grid.json
framework/: Analyzer.py  Artist.py  Experiment.py  FileManager.py  Generator.py  MongoDatabase.py  ParameterManager.py  helpers.py
notebooks/: Star.ipynb  (+7 more)
src/FLAPS/: CMakeLists.txt  FLAPS.cpp  main.cpp
src/FLAPS/include/: BST.h  BiMatcher.h  Generator.h  Graph.h  GridParams.h  GridWorld.h  MDP.h  MarketWorld.h  Network.h  NetworkParams.h  Oracle.h  SubMin.h  World.h  helpers.h
src/FLAPS/tests/: BSTTest.cpp  GeneratorTest.cpp  GraphTest.cpp  MDPTest.cpp  MarketWorldTest.cpp  OracleTest.cpp  SubMinTest.cpp
(+93 files in other folders)
